[gd_scene load_steps=13 format=3 uid="uid://b5s7hjcblj383"]

[ext_resource type="Script" uid="uid://cooy3ad7cbr3e" path="res://menu.gd" id="1_lti8b"]
[ext_resource type="Texture2D" uid="uid://8brnhsyk0n81" path="res://assets/imagenes/fondo.png" id="2_ouk20"]
[ext_resource type="FontFile" uid="uid://ca1lrsdpb1hmo" path="res://assets/fonts/Rajdhani-SemiBold.ttf" id="3_mae5d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mae5d"]
bg_color = Color(0.105882354, 0.14117648, 0.21176471, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.91764706, 0.9490196, 0.98039216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4hy44"]
bg_color = Color(0.14117648, 0.19215687, 0.2901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.91764706, 0.9490196, 0.98039216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ytr4m"]
bg_color = Color(0.078431375, 0.105882354, 0.16470589, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.91764706, 0.9490196, 0.98039216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ouk20"]
bg_color = Color(0.105882354, 0.14117648, 0.21176471, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.91764706, 0.9490196, 0.98039216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l48gv"]
bg_color = Color(0.14117648, 0.19215687, 0.2901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.91764706, 0.9490196, 0.98039216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ecwwl"]
bg_color = Color(0.078431375, 0.105882354, 0.16470589, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.91764706, 0.9490196, 0.98039216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kk3ma"]
bg_color = Color(0.105882354, 0.14117648, 0.21176471, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.91764706, 0.9490196, 0.98039216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nrnbx"]
bg_color = Color(0.14117648, 0.19215687, 0.2901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.91764706, 0.9490196, 0.98039216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqepy"]
bg_color = Color(0.078431375, 0.105882354, 0.16470589, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.91764706, 0.9490196, 0.98039216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 8

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -90.0
offset_right = 100.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_ouk20")
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleContainer" type="Control" parent="CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(900, 140)
layout_mode = 2
mouse_filter = 2

[node name="TitleShadow" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TitleContainer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(3, 3)
theme_override_colors/font_color = Color(0, 0, 0, 0.6666667)
theme_override_fonts/font = ExtResource("3_mae5d")
theme_override_font_sizes/font_size = 60
text = "Piedra Papel Tijera"
horizontal_alignment = 1

[node name="TitleGlow" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TitleContainer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -11.5
offset_right = 72.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.01, 1.01)
theme_override_colors/font_color = Color(0.49411765, 0.78431374, 1, 0.33333334)
theme_override_fonts/font = ExtResource("3_mae5d")
theme_override_font_sizes/font_size = 60
text = "Piedra Papel Tijera"
horizontal_alignment = 1

[node name="TitleText" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -11.5
offset_right = 72.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_mae5d")
theme_override_font_sizes/font_size = 60
text = "Piedra Papel Tijera"

[node name="PiedraPapelTijera" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Piedra Papel Tijera"

[node name="JugarButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(520, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_mae5d")
theme_override_styles/hover = SubResource("StyleBoxFlat_4hy44")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ytr4m")
text = "Jugar"

[node name="OpcionesButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(520, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ouk20")
theme_override_styles/hover = SubResource("StyleBoxFlat_l48gv")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ecwwl")
text = "Opciones"

[node name="SalirButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(520, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_kk3ma")
theme_override_styles/hover = SubResource("StyleBoxFlat_nrnbx")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_iqepy")
text = "Salir"
